--- a/BlazingTrails.Client/Features/Home/HomePage.razor
+++ b/BlazingTrails.Client/Features/Home/HomePage.razor
@@ -9,8 +9,12 @@
 }
 else
 {
+<TrailDetails Trail="_selectedTrail" />
+
+<TrailSearch />
+
 <div class="grid">
-    <TrailDetails Trail="_selectedTrail" />
+
     @foreach (var trail in _trails)
     {
         <TrailCard Trail="trail" OnSelected="HandleTrailSelected" />
