--- a/BlazingTrails.Client/_Imports.razor
+++ b/BlazingTrails.Client/_Imports.razor
@@ -9,3 +9,5 @@
 @using BlazingTrails.Client
 @using BlazingTrails.Client.Features.Layout
 @using BlazingTrails.Client.Features.Home
+@using Blazored.FluentValidation
+@using MediatR;
