--- a/BlazingTrails.Client/Features/ManageTrails/_Imports.razor
+++ b/BlazingTrails.Client/Features/ManageTrails/_Imports.razor
@@ -1,1 +1,2 @@
-﻿@using BlazingTrails.Shared.Features.ManageTrails
+﻿@using BlazingTrails.Shared.Features.ManageTrails.Shared
+@using BlazingTrails.Client.Features.ManageTrails.Shared
