--- a/BlazingTrails.Client/Features/Home/Search/SearchPage.razor
+++ b/BlazingTrails.Client/Features/Home/Search/SearchPage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/search/{searchterm}"
 @page "/search/{SearchTerm}/maxlength/{MaxLength:int}"
 
-@inject HttpClient Http
+@inject IMediator Mediator
 @inject NavigationManager NavManager
 
 <nav aria-label="breadcrumb">
@@ -43,21 +43,36 @@ else
     private IEnumerable<Trail>? _searchResults;
     private Trail? _selectedTrail;
 
-    protected override async Task OnInitializedAsync()
+    protected override async Task OnInitializedAsync ()
     {
         try
         {
-            var allTrails = await Http.GetFromJsonAsync< IEnumerable < Trail >> ("trails/trail-data.json");
-            _searchResults = allTrails!.Where(x =>
-                x.Name.Contains(SearchTerm, StringComparison.CurrentCultureIgnoreCase) ||
+            var response = await Mediator.Send(new GetTrailsRequest());
+            var allTrails = response.Trails
+                .Select(x => new Trail
+                {
+                    Id = x.Id,
+                    Name = x.Name,
+                    Image = x.Image ?? string.Empty,
+                    Description = x.Description,
+                    Location = x.Location,
+                    Length = x.Length,
+                    TimeInMinutes = x.TimeInMinutes
+                });
+
+            _searchResults = allTrails.Where(x => 
+                x.Name.Contains(SearchTerm, StringComparison.CurrentCultureIgnoreCase) || 
                 x.Location.Contains(SearchTerm, StringComparison.CurrentCultureIgnoreCase));
             _cachedSearchResults = _searchResults;
+
+            UpdateFilters();
         }
         catch (HttpRequestException ex)
         {
             Console.WriteLine($"There was a problem loading trail data: {ex.Message}");
         }
     }
+
 
     protected override void OnParametersSet() => UpdateFilters();
 
