--- a/BlazingTrails.Client/Features/Home/Shared/TrailCard.razor
+++ b/BlazingTrails.Client/Features/Home/Shared/TrailCard.razor
@@ -1,5 +1,7 @@
-﻿<div class="card shadow" style="width: 18rem;">
-    <img src="@Trail.Image" class="card-img-top" alt="@Trail.Name">
+﻿@inject NavigationManager NavManager
+
+<div class="card shadow" style="width: 18rem;">
+    <img src="@(!string.IsNullOrWhiteSpace(Trail.Image) ? $"images/{Trail.Image}" : "https://via.placeholder.com/286x190.jpg?text=No+Image+For+Trail")" class="card-img-top" />
     <div class="card-body">
         <h5 class="card-title">@Trail.Name</h5>
         <h6 class="card-subtitle mb-3 text-muted">
@@ -20,7 +22,9 @@
             @onclick="@(async () => await OnSelected.InvokeAsync(Trail))">
             <i class="bi bi-binoculars"></i>
         </button>
-
+        <button class="btn btn-outline-secondary float-right" title="Edit" @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{Trail.Id}"))">
+            Update
+        </button>
     </div>
 </div>
 
@@ -28,7 +32,6 @@
     [Parameter, EditorRequired]
     public Trail Trail { get; set; } = default!;
 
-    // [Parameter, EditorRequired]
     [Parameter]
     public EventCallback<Trail> OnSelected { get; set; }
 }
