--- a/BlazingTrails.Client/_Imports.razor
+++ b/BlazingTrails.Client/_Imports.razor
@@ -9,5 +9,6 @@
 @using BlazingTrails.Client
 @using BlazingTrails.Client.Features.Layout
 @using BlazingTrails.Client.Features.Home
+@using BlazingTrails.ComponentLibrary
 @using Blazored.FluentValidation
-@using MediatR;
+@using MediatR
