--- a/BlazingTrails.Client/Features/ManageTrails/EditTrail/EditTrailPage.razor
+++ b/BlazingTrails.Client/Features/ManageTrails/EditTrail/EditTrailPage.razor
@@ -56,13 +56,9 @@ else
             _trail.Image = response.Trail.Image;
             _trail.Length = response.Trail.Length;
             _trail.TimeInMinutes = response.Trail.TimeInMinutes;
-            _trail.Route.Clear();
-            _trail.Route.AddRange(response.Trail.RouteInstructions
-                .Select(ri => new TrailDto.RouteInstruction
-                    {
-                        Stage = ri.Stage,
-                        Description = ri.Description
-                    }));
+            _trail.Waypoints.Clear();
+            _trail.Waypoints.AddRange(response.Trail.Waypoints
+                .Select(x => new TrailDto.WaypointDto(x.Latitude, x.Longitude)));
         }
         else
         {
@@ -87,13 +83,9 @@ else
             _trail.Location = trail.Location;
             _trail.Length = trail.Length;
             _trail.TimeInMinutes = trail.TimeInMinutes;
-            _trail.Route.Clear();
-            _trail.Route.AddRange(trail.Route
-                .Select(ri => new TrailDto.RouteInstruction
-                {
-                    Stage = ri.Stage,
-                    Description = ri.Description
-                }));
+            _trail.Waypoints.Clear();
+            _trail.Waypoints.AddRange(trail.Waypoints
+                .Select(x => new TrailDto.WaypointDto(x.Latitude, x.Longitude)));
 
             _submitSuccessful = true;
 
