--- a/BlazingTrails.Client/Features/Home/HomePage.razor
+++ b/BlazingTrails.Client/Features/Home/HomePage.razor
@@ -70,7 +70,7 @@ else
     private IEnumerable<Trail>? _trails;
     private Trail? _selectedTrail;
 
-    protected override async Task OnInitializedAsync ()
+    protected override async Task OnInitializedAsync()
     {
         try
         {
@@ -84,7 +84,8 @@ else
                     Description = x.Description,
                     Location = x.Location,
                     Length = x.Length,
-                    TimeInMinutes = x.TimeInMinutes
+                    TimeInMinutes = x.TimeInMinutes,
+                    Waypoints = x.Waypoints.Select(wp => new BlazingTrails.ComponentLibrary.Map.LatLong( wp.Latitude, wp.Longitude)).ToList()
                 });
         }
         catch (HttpRequestException ex)
