--- a/BlazingTrails.Client/Features/Home/Search/SearchPage.razor
+++ b/BlazingTrails.Client/Features/Home/Search/SearchPage.razor
@@ -57,6 +57,7 @@ else
                     Description = x.Description,
                     Location = x.Location,
                     Length = x.Length,
+                    Owner = x.Owner,
                     TimeInMinutes = x.TimeInMinutes
                 });
 
