--- a/BlazingTrails.Client/Features/Home/Shared/TrailCard.razor
+++ b/BlazingTrails.Client/Features/Home/Shared/TrailCard.razor
@@ -22,9 +22,16 @@
             @onclick="@(async () => await OnSelected.InvokeAsync(Trail))">
             <i class="bi bi-binoculars"></i>
         </button>
-        <button class="btn btn-outline-secondary float-right" title="Edit" @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{Trail.Id}"))">
-            Update
-        </button>
+        <AuthorizeView>
+            @if (Trail.Owner.Equals(context.User.Identity?.Name, StringComparison.OrdinalIgnoreCase) || context.User.IsInRole("Administrator"))
+            {
+                <button class="btn btn-outline-secondary float-right"
+                        title="Edit"
+                        @onclick="@(() => NavManager.NavigateTo($"/edit-trail/{Trail.Id}"))">
+                    <i class="bi bi-pencil"></i>
+                </button>
+            }
+        </AuthorizeView>
     </div>
 </div>
 
