--- a/BlazingTrails.Client/Features/ManageTrails/AddTrail/AddTrailPage.razor
+++ b/BlazingTrails.Client/Features/ManageTrails/AddTrail/AddTrailPage.razor
@@ -1,5 +1,8 @@
 ﻿@page "/add-trail"
+@attribute [Authorize]
+
 @using BlazingTrails.Shared.Features.ManageTrails.AddTrail;
+
 @inject IMediator Mediator
 
 <PageTitle>Add Trail - Blazing Trails</PageTitle>
