--- a/BlazingTrails.Client/Features/ManageTrails/EditTrail/EditTrailPage.razor
+++ b/BlazingTrails.Client/Features/ManageTrails/EditTrail/EditTrailPage.razor
@@ -1,6 +1,9 @@
 ﻿@page "/edit-trail/{TrailId:int}"
+@attribute [Authorize]
+
 @using BlazingTrails.Shared.Features.ManageTrails.EditTrail;
 @using BlazingTrails.Shared.Features.ManageTrails.Shared;
+
 @inject IMediator Mediator
 
 <PageTitle>Edit Trail - Blazing Trails</PageTitle>
@@ -70,7 +73,7 @@ else
 
     private async Task SubmitEditTrail(TrailDto trail, IBrowserFile? image)
     {
-        var response = await Mediator.Send(new EditTrailRequest (trail));
+        var response = await Mediator.Send(new EditTrailRequest(trail));
         if (!response.IsSuccess)
         {
             _submitSuccessful = false;
