--- a/BlazingTrails.Client/_Imports.razor
+++ b/BlazingTrails.Client/_Imports.razor
@@ -9,7 +9,9 @@
 @using BlazingTrails.Client
 @using BlazingTrails.Client.Features.Layout
 @using BlazingTrails.Client.Features.Home
+@using BlazingTrails.Client.Features.Shared
 @using BlazingTrails.ComponentLibrary
+@using BlazingTrails.Client.State
 @using Blazored.FluentValidation
 @using MediatR
 @using Microsoft.AspNetCore.Authorization
