--- a/BlazingTrails.Client/App.razor
+++ b/BlazingTrails.Client/App.razor
@@ -1,4 +1,6 @@
-﻿<CascadingAuthenticationState>
+﻿@inject AppState AppState
+
+<CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
@@ -22,3 +24,13 @@
         </NotFound>
     </Router>
 </CascadingAuthenticationState>
+
+@code {
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await AppState.Initialize();
+        }
+    }
+}
