--- a/BlazingTrails.Client/Features/Auth/LoginStatus.razor
+++ b/BlazingTrails.Client/Features/Auth/LoginStatus.razor
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication;
 @inject NavigationManager Navigation
 
-<div class="container text-right">
+<div class="text-right">
     <AuthorizeView>
         <Authorized>
             <div>
